traefik/k8s/ip-whitelist-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-whitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 172.16.0.0/22
