traefik/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"metallb.universe.tf/address-pool":"default-pool"},"labels":{"app":"traefik"},"name":"traefik","namespace":"traefik"},"spec":{"loadBalancerIP":"172.16.0.80","ports":[{"name":"web","port":80,"protocol":"TCP","targetPort":80},{"name":"websecure","port":443,"protocol":"TCP","targetPort":443}],"selector":{"app":"traefik"},"type":"LoadBalancer"}}
    metallb.universe.tf/address-pool: default-pool
  creationTimestamp: "2025-11-28T21:02:46Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: traefik
  name: traefik
  namespace: traefik
  resourceVersion: "1973725"
  uid: 29f21d09-70d4-4f30-adc2-a56614ad229c
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.235.31
  clusterIPs:
  - 10.43.235.31
  externalTrafficPolicy: Local 
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 172.16.0.80
  ports:
  - name: web
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  - name: websecure
    nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
